# cmake_ex

./: README.md
t1/: CMakeLists.txt  README.md  main.cc
t2/: CMakeLists.txt  README  README.md
t2/src/: CMakeLists.txt
t3/: CMakeLists.txt  README
t3/lib/: CMakeLists.txt  hello.h
t4/: CMakeLists.txt  README.md
t4/src/: CMakeLists.txt
