cmake_minimum_required(VERSION 3.5)
PROJECT (HELLO)
SET(SRC_LIST main.c)
MESSAGE(STATUS "This is BINARY dir " ${HELLO_BINARY_DIR})
MESSAGE(STATUS "This is SOURCE dir " ${HELLO_SOURCE_DIR})
add_subdirectory(src)
INSTALL(FILES COPYRIGHT README DESTINATION share/doc/cmake_ex/t2)
INSTALL(PROGRAMS runhello.sh DESTINATION bin)
INSTALL(DIRECTORY doc/ DESTINATION share/doc/cmake_ex/t2)
